<resources>
    <string name="Legal">Legal</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="accept">Accept</string>
    <string name="action_double">Action on Double-Tap:</string>
    <string name="action_long">Action on Long-Press:</string>
    <string name="action_open_menu">Open options menu</string>
    <string name="add_shortcut">Add icon to Quick Access</string>
    <string name="add_shortcut_fail">"Automatic adding is only available on Android 13+. 
On older versions, swipe down to open Quick Settings, tap Edit, then find and add the “Tap Translate Screen” tile."</string>
    <string name="ads_app_id">ca-app-pub-9271031748604556~7437465450</string>
    <string name="after_trial_end">after trial ends.</string>
    <string name="ai_translation">Unlimited AI-powered translation</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="app_name">Translate On Screen</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="appcenter_id">709bdc34-bc7d-4ca5-b702-6303bb67e588</string>
    <string name="ask_rating">If the app is useful to you, rate us on Google Play. Thank you for using the application.</string>
    <string name="auto_bg_detail">May affect performance due to need to add color recognition</string>
    <string name="auto_dim">Auto-reduce transparency</string>
    <string name="auto_full_mode">Auto full-screen mode</string>
    <string name="auto_mode_full_setting_detail">Automatically translate all text on your screen, perfect for novels, comics, and reading content</string>
    <string name="auto_mode_setting">Auto mode settings</string>
    <string name="auto_mode_setting_detail">Automatically translate a fixed area on the screen, perfect for game dialogue and subtitles</string>
    <string name="auto_move">Auto-move to screen edge</string>
    <string name="auto_move_detail">If the floating icon has the “Region Mode” action assigned, auto-move will activate after a 5-second delay</string>
    <string name="auto_on_touch">Auto translate by interaction</string>
    <string name="auto_on_touch_detail">Automatically translate when you touch or swipe the screen</string>
    <string name="auto_region_mode">Auto region mode</string>
    <string name="auto_translation">Unlimited auto translation</string>
    <string name="avoid_region">*Note: avoid placing translated text in this region</string>
    <string name="bg_border">Background border</string>
    <string name="bg_color">Background color</string>
    <string name="bg_trans">Background transparency</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_collapse">Collapse</string>
    <string name="bottomsheet_action_collapse_description">Collapse the bottom sheet</string>
    <string name="bottomsheet_action_expand">Expand</string>
    <string name="bottomsheet_action_expand_description">Expand the bottom sheet</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="bottomsheet_action_half_expand_description">Half expand the bottom sheet</string>
    <string name="bottomsheet_drag_handle_content_description">Drag handle</string>
    <string name="bottomsheet_state_collapsed">Collapsed</string>
    <string name="bottomsheet_state_expanded">Expanded</string>
    <string name="bottomsheet_state_half_expanded">Half expanded</string>
    <string name="buy_once">Buy once, enjoy forever</string>
    <string name="call_notification_answer_action">Answer</string>
    <string name="call_notification_answer_video_action">Video</string>
    <string name="call_notification_decline_action">Decline</string>
    <string name="call_notification_hang_up_action">Hang Up</string>
    <string name="call_notification_incoming_text">Incoming call</string>
    <string name="call_notification_ongoing_text">Ongoing call</string>
    <string name="call_notification_screening_text">Screening an incoming call</string>
    <string name="camera">Camera</string>
    <string name="camera_permission">Camera Permission Required</string>
    <string name="cancel">Cancel</string>
    <string name="center_text">Text align center</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="choose_action">Choose Action</string>
    <string name="choose_engine">Chooose Translation</string>
    <string name="choose_font">Choose Font</string>
    <string name="choose_icon">Choose Icon</string>
    <string name="choose_icon_floating">Choose the floating icon</string>
    <string name="choose_language">Choose Language</string>
    <string name="choose_mode">Choose Default Mode</string>
    <string name="choose_voice">Choose Voice</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="click_on_a_word_to_translate">Click on a word to translate</string>
    <string name="close">Close</string>
    <string name="color_draw">Color of selection border</string>
    <string name="com.google.firebase.crashlytics.mapping_file_id">4a6345bef8dc423090fcf99747cca109</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">"%1$s won't run without Google Play services, which are missing from your device."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">"%1$s won't run without Google Play services, which are not supported by your device."</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="copied">Copied</string>
    <string name="copy_toast_msg">Link copied to clipboard</string>
    <string name="crop_image_activity_no_permissions">Cancelling, required permissions are not granted</string>
    <string name="crop_image_activity_title" />
    <string name="crop_image_menu_crop">Crop</string>
    <string name="crop_image_menu_flip">Flip</string>
    <string name="crop_image_menu_flip_horizontally">Flip horizontally</string>
    <string name="crop_image_menu_flip_vertically">Flip vertically</string>
    <string name="crop_image_menu_rotate_left">Rotate counter clockwise</string>
    <string name="crop_image_menu_rotate_right">Rotate</string>
    <string name="default_translation_mode">Default translation mode</string>
    <string name="default_web_client_id">247695254756-5b1ij1pm61g17ruq38us2cbpp4eviu4h.apps.googleusercontent.com</string>
    <string name="delete">Delete</string>
    <string name="double_tap_delay_tap">Setting an action for Double-tap will slightly delay Single-tap activation</string>
    <string name="font">Font</string>
    <string name="hide_border">Hide selection border</string>
    <string name="hide_source_text">Hide source text</string>
    <string name="ic_floating_detail"><u>See details and troubleshooting instructions.</u></string>
    <string name="ic_floating_problem">"* Some manufacturers' Battery Saver may cause background services to malfunction and close the floating icon."</string>
    <string name="icon_color">Floating icon color</string>
    <string name="icon_size">Floating icon size</string>
    <string name="icon_trans">Floating icon transparency</string>
    <string name="result_width">Width of result window</string>
    <string name="speak_after_translation">Speak after translation</string>
    <string name="speak_after_translation_detail">Automatically read translated text</string>
    <string name="text_color_new">Text color</string>
    <string name="text_size_new">Text size</string>
    <string name="text_style_settings">Text style settings</string>
    <string name="text_style_settings_detail_auto_full">Auto full-screen mode uses the same style as Full-screen mode</string>
    <string name="the_result_under_selected_text">The result window displays under the selection border</string>
    <string name="time_auto_stop">Auto-stop duration</string>
    <string name="time_between">Auto translate on interval</string>
    <string name="time_hide_text">Duration of translated text display</string>
    <string name="vertical_text_new">Original text is vertical text</string>
    <string name="vertical_text_new_detail">"Apply when translating Chinese, Japanese, Korean
*Note: Turn off this option when the original text is in normal layout to avoid display issues"</string>
</resources>