<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    android:id="@id/rootView"
    android:background="@color/cl_background_grayW_black"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <com.recognize_text.translate.screen.domain.widgets.widget_main.WidgetBgDemo
            android:id="@id/dialog_setting_full_wbgd"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />
        <com.recognize_text.translate.screen.domain.widgets.ResultRegionView
            android:id="@id/dialog_setting_draw_result_window"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="80.0dip"
            android:layout_alignParentTop="true"
            android:layout_centerInParent="true" />
    </RelativeLayout>
    <androidx.core.widget.NestedScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto">
        <LinearLayout
            android:orientation="vertical"
            android:paddingLeft="10.0dip"
            android:paddingRight="10.0dip"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
            <com.recognize_text.translate.screen.domain.widgets.widget_main.WidgetChooseValue
                android:id="@id/ac_setting_draw_wcv_text_size"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8.0dip"
                app:titleText="@string/text_size_new"
                app:vipVisibility="gone" />
            <com.recognize_text.translate.screen.domain.widgets.widget_main.WidgetChooseColor
                android:id="@id/ac_setting_draw_wcc_text_color"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6.0dip"
                app:titleText="@string/text_color_new"
                app:vipVisibility="gone" />
            <com.recognize_text.translate.screen.domain.widgets.widget_main.WidgetChooseFont
                android:id="@id/ac_setting_draw_wcf_text_font"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6.0dip"
                app:titleText="@string/font" />
            <com.recognize_text.translate.screen.domain.widgets.widget_main.WidgetSwitch
                android:id="@id/ac_setting_draw_ws_hide_source"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6.0dip"
                app:titleText="@string/hide_source_text"
                app:vipVisibility="gone" />
            <com.recognize_text.translate.screen.domain.widgets.widget_main.WidgetChooseValue
                android:id="@id/ac_setting_draw_wcv_width_result"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6.0dip"
                app:titleText="@string/result_width"
                app:vipVisibility="gone" />
            <com.recognize_text.translate.screen.domain.widgets.widget_main.WidgetSwitch
                android:id="@id/ac_setting_draw_ws_result_under"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6.0dip"
                app:titleText="@string/the_result_under_selected_text"
                app:vipVisibility="gone" />
            <com.recognize_text.translate.screen.domain.widgets.widget_main.WidgetChooseColor
                android:id="@id/ac_setting_draw_wcc_draw_color"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6.0dip"
                app:titleText="@string/color_draw"
                app:vipVisibility="gone" />
            <com.recognize_text.translate.screen.domain.widgets.widget_main.WidgetSwitch
                android:id="@id/dialog_setting_draw_ws_vertical"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6.0dip"
                android:layout_marginBottom="20.0dip"
                app:detailText="@string/vertical_text_new_detail"
                app:titleText="@string/vertical_text_new"
                app:vipVisibility="gone" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>