<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@id/rootView"
    android:background="@color/cl_background_white_black"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.core.widget.NestedScrollView
        android:background="@color/cl_background_grayW_black"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginTop="60.0dip">
        <LinearLayout
            android:orientation="vertical"
            android:paddingLeft="10.0dip"
            android:paddingRight="10.0dip"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
            <LinearLayout
                android:orientation="vertical"
                android:background="@drawable/bg_round_12"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginTop="12.0dip">
                <com.recognize_text.translate.screen.domain.widgets.widget_main.WidgetChooseValue
                    android:id="@id/dialog_setting_auto_full_wcv_time_hide_text"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    app:titleText="@string/time_hide_text"
                    app:vipVisibility="gone" />
                <View
                    android:background="@color/cl_underline"
                    android:layout_width="fill_parent"
                    android:layout_height="0.6dip"
                    android:layout_marginLeft="15.0dip" />
                <com.recognize_text.translate.screen.domain.widgets.widget_main.WidgetSwitch
                    android:id="@id/dialog_setting_auto_full_ws_auto_on_interaction"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    app:detailText="@string/auto_on_touch_detail"
                    app:titleText="@string/auto_on_touch"
                    app:vipVisibility="gone" />
                <LinearLayout
                    android:orientation="vertical"
                    android:id="@id/dialog_setting_auto_full_ll_container"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:alpha="0.4">
                    <View
                        android:background="@color/cl_underline"
                        android:layout_width="fill_parent"
                        android:layout_height="0.6dip"
                        android:layout_marginLeft="15.0dip" />
                    <com.recognize_text.translate.screen.domain.widgets.widget_main.WidgetChooseValue
                        android:id="@id/dialog_setting_auto_full_wcv_time_between"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        app:titleText="@string/time_between" />
                    <View
                        android:background="@color/cl_underline"
                        android:layout_width="fill_parent"
                        android:layout_height="0.6dip"
                        android:layout_marginLeft="15.0dip" />
                    <com.recognize_text.translate.screen.domain.widgets.widget_main.WidgetChooseValue
                        android:id="@id/dialog_setting_auto_full_wcv_time_auto_stop"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        app:titleText="@string/time_auto_stop" />
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:gravity="center"
                android:orientation="horizontal"
                android:id="@id/dialog_setting_auto_full_ll_style"
                android:background="@drawable/bg_round_12"
                android:paddingLeft="14.0dip"
                android:paddingTop="12.0dip"
                android:paddingRight="14.0dip"
                android:paddingBottom="12.0dip"
                android:focusable="true"
                android:clickable="true"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10.0dip"
                android:foreground="@drawable/fg_efftect_12"
                android:minHeight="65.0dip"
                android:paddingHorizontal="14.0dip"
                android:paddingVertical="12.0dip">
                <ImageView
                    android:layout_gravity="center"
                    android:layout_width="42.0dip"
                    android:layout_height="42.0dip"
                    android:src="@drawable/ic_style_svg" />
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="0.0dip"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12.0dip"
                    android:layout_weight="1.0">
                    <TextView
                        android:theme="@style/fontBold"
                        android:textSize="14.0dip"
                        android:textColor="@color/cl_text1"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/text_style_settings"
                        android:includeFontPadding="false" />
                    <TextView
                        android:textSize="12.0dip"
                        android:textColor="@color/cl_text2"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/text_style_settings_detail_auto_full"
                        android:includeFontPadding="false" />
                </LinearLayout>
                <ImageView
                    android:layout_gravity="center"
                    android:layout_width="10.0dip"
                    android:layout_height="10.0dip"
                    android:layout_marginLeft="10.0dip"
                    android:src="@drawable/ic_more_down"
                    android:rotation="-90.0" />
            </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
    <ImageView
        android:gravity="center"
        android:id="@id/dialog_setting_auto_iv_close"
        android:padding="8.0dip"
        android:focusable="true"
        android:clickable="true"
        android:layout_width="40.0dip"
        android:layout_height="40.0dip"
        android:layout_marginLeft="8.0dip"
        android:layout_marginTop="10.0dip"
        android:foreground="@drawable/fg_efftect_circle"
        android:src="@drawable/ic_back_s" />
</RelativeLayout>